# Loan-Schedule-Manager

./: .gitignore  README.md  license.txt  pyproject.toml
loan_schedule_manager/: hooks.py  modules.txt  patches.txt
loan_schedule_manager/api/: schedule_api.py
loan_schedule_manager/config/: __init__.py  desktop.py
loan_schedule_manager/events/: journal_entry.py
loan_schedule_manager/loan_schedule_manager/custom/: journal_entry.json
loan_schedule_manager/loan_schedule_manager/doctype/bank_loan_schedule/: bank_loan_schedule.js  bank_loan_schedule.json  bank_loan_schedule.py  test_bank_loan_schedule.py
loan_schedule_manager/loan_schedule_manager/doctype/bank_loan_schedule_adjustment/: bank_loan_schedule_adjustment.json  bank_loan_schedule_adjustment.py  test_bank_loan_schedule_adjustment.py
loan_schedule_manager/loan_schedule_manager/doctype/bank_loan_schedule_line/: bank_loan_schedule_line.json  bank_loan_schedule_line.py  test_bank_loan_schedule_line.py
loan_schedule_manager/loan_schedule_manager/page/loan_schedule_upload/: loan_schedule_upload.js  loan_schedule_upload.json
loan_schedule_manager/loan_schedule_manager/report/loan_portfolio_summary/: loan_portfolio_summary.js  loan_portfolio_summary.json  loan_portfolio_summary.py
loan_schedule_manager/loan_schedule_manager/tests/: test_loan_schedule.py
loan_schedule_manager/patches/v1_0/: add_custom_fields_to_journal_entry.py
loan_schedule_manager/public/js/: loan_schedule_upload.js
loan_schedule_manager/scheduler/: notifications.py  tasks.py
loan_schedule_manager/utils/: pdf_parser.py
(+1 files in other folders)
